--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>JACK DATA ANALYST PORTFOLIO<br />
 						</h1>
-						<p> Excel, SQL, Python and Tableau <a href="https://www.linkedin.com/in/thuan-trang/">@ThuanDataAnalyst</a> </p>
+						<p> Excel, SQL, Python and Tableau <a href="https://www.linkedin.com/in/thuan-trang/">@JackDataAnalyst</a> </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
