--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="icon brands alt fa-wix"><span class="label">Wix</span></a></li>
-							<li><a href="https://www.youtube.com/@Ju1y2014" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
-							<li><a href="https://www.linkedin.com/in/thuan-trang/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-							<li><a href="https://github.com/July24th2014/PorfolioProjects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/thuan-trang/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://github.com/July24th2014/PorfolioProjects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="icon brands alt fa-wix"><span class="label">Wix</span></a></li>
+									<li><a href="https://www.youtube.com/@Ju1y2014" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 						</ul>
 					</nav>
 
@@ -57,7 +57,7 @@
 								</header>
 								<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Project_Google_Play_Store.ipynb" class="image main"><img src="images/1.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Project_Google_Play_Store.ipynb" class="button large">View Project</a></li>
+									<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Project_Google_Play_Store.ipynb" class="button large">View</a></li>
 								</ul>
 							</article>
 
@@ -71,7 +71,7 @@
 									<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/HOUSING%20-%20Thuan%20Trang.sql" class="image fit"><img src="images/housing.jpeg" alt="" /></a>
 									<p>The project involves transforming raw housing data in MySQL for analysis purposes.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/HOUSING%20-%20Thuan%20Trang.sql" class="button">View Project</a></li>
+										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/HOUSING%20-%20Thuan%20Trang.sql" class="button">View</a></li>
 									</ul>
 								</article>
 								<article>
@@ -82,7 +82,7 @@
 									<a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="image fit"><img src="images/ifixit.jpg" alt="" /></a>
 									<p>During the pandemic, we provide nurses and technicians relevant and useful information about devices through this project.</p>
 									<ul class="actions special">
-										<li><a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="button">View Project</a></li>
+										<li><a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="button">View</a></li>
 									</ul>
 								</article>
 								<article>
@@ -93,7 +93,7 @@
 									<a href="https://public.tableau.com/app/profile/thuan.trang/viz/AirBnBProject_16927394839910/Dashboard1" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
 									<p>Tableau Dashboards for projects on Airbnb.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/thuan.trang/viz/AirBnBProject_16927394839910/Dashboard1" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/thuan.trang/viz/AirBnBProject_16927394839910/Dashboard1" class="button">View</a></li>
 									</ul>
 								</article>
 								<article>
@@ -104,18 +104,29 @@
 									<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Web%20Scraping%20Companies%20by%20Revenue.ipynb" class="image fit"><img src="images/world-map-pro.jpg" alt="" /></a>
 									<p>Scrape data from Wikipedia to analyze the largest companies in the United States by revenue.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Web%20Scraping%20Companies%20by%20Revenue.ipynb" class="button">View Project</a></li>
+										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Web%20Scraping%20Companies%20by%20Revenue.ipynb" class="button">View</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/COVID%20Porfolio%20Project%202021-2022%20-Thuan%20Trang.sql">Data exploration<br />
+										<h2><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/COVID%20Porfolio%20Project%202021-2022%20-Thuan%20Trang.sql">Data Exploration<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/COVID%20Porfolio%20Project%202021-2022%20-Thuan%20Trang.sql" class="image fit"><img src="images/covid.jpg" alt="" /></a>
 									<p>COVID 19 data exploration project using MySQL.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/COVID%20Porfolio%20Project%202021-2022%20-Thuan%20Trang.sql" class="button">Full Story</a></li>
+										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/COVID%20Porfolio%20Project%202021-2022%20-Thuan%20Trang.sql" class="button">View</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Bus_Breakdown_and_Delays_NYC%20Project.xlsx">Data Exploration In Excel<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Bus_Breakdown_and_Delays_NYC%20Project.xlsx" class="image fit"><img src="images/NYC Bus.jpg" alt="" /></a>
+									<p> Analyze data and identify patterns causing bus breakdowns and delays in NYC, with the goal of improving the city's bus transportation system.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Bus_Breakdown_and_Delays_NYC%20Project.xlsx" class="button">View</a></li>
 									</ul>
 								</article>
 							</section>
@@ -160,10 +171,10 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="icon brands alt fa-wix"><span class="label">Wix</span></a></li>
-									<li><a href="https://www.youtube.com/@Ju1y2014" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 									<li><a href="https://www.linkedin.com/in/thuan-trang/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/July24th2014/PorfolioProjects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="icon brands alt fa-wix"><span class="label">Wix</span></a></li>
+									<li><a href="https://www.youtube.com/@Ju1y2014" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
 								</ul>
 							</section>
 						</section>
