--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 										</a></h2>
 									</header>
 									<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Bus_Breakdown_and_Delays_NYC%20Project.xlsx" class="image fit"><img src="images/NYC Bus.jpg" alt="" /></a>
-									<p> Analyze data and identify patterns causing bus breakdowns and delays in NYC, with the goal of improving the city's bus transportation system.</p>
+									<p> Identify patterns causing bus breakdowns and delays in NYC, with the goal of improving the city's bus transportation system.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Bus_Breakdown_and_Delays_NYC%20Project.xlsx" class="button">View</a></li>
 									</ul>
