--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 						</ul>
 						<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/thuan-trang/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://public.tableau.com/app/profile/thuan.trang/vizzes" class="icon brands alt fa-tableau"><span class="label">Tableau</span></a></li>
 									<li><a href="https://github.com/July24th2014/PorfolioProjects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="icon brands alt fa-wix"><span class="label">Wix</span></a></li>
 									<li><a href="https://www.youtube.com/@Ju1y2014" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
@@ -87,13 +88,13 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://public.tableau.com/app/profile/thuan.trang/viz/AirBnBProject_16927394839910/Dashboard1">Tableau<br />
+										<h2><a href="https://public.tableau.com/app/profile/thuan.trang/vizzes">Tableau<br />
 										</a></h2>
 									</header>
-									<a href="https://public.tableau.com/app/profile/thuan.trang/viz/AirBnBProject_16927394839910/Dashboard1" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
-									<p>Tableau Dashboards for projects on Airbnb.</p>
+									<a href="https://public.tableau.com/app/profile/thuan.trang/vizzes" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
+									<p>Tableau Dashboards for projects on Airbnb, Telco CustomerChurn and KPI</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/thuan.trang/viz/AirBnBProject_16927394839910/Dashboard1" class="button">View</a></li>
+										<li><a href="https://public.tableau.com/app/profile/thuan.trang/vizzes" class="button">View</a></li>
 									</ul>
 								</article>
 								<article>
@@ -172,6 +173,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/thuan-trang/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://public.tableau.com/app/profile/thuan.trang/vizzes" class="icon brands alt fa-tableau"><span class="label">Tableau</span></a></li>
 									<li><a href="https://github.com/July24th2014/PorfolioProjects" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="icon brands alt fa-wix"><span class="label">Wix</span></a></li>
 									<li><a href="https://www.youtube.com/@Ju1y2014" class="icon brands alt fa-youtube"><span class="label">Youtube</span></a></li>
