--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>JACK DATA ANALYST PORTFOLIO</title>
+		<title>THUAN (JACK) TRANG DATA ANALYST PORTFOLIO</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>JACK DATA ANALYST PORTFOLIO<br />
+						<h1>THUAN (JACK) TRANG DATA ANALYST PORTFOLIO<br />
 						</h1>
 						<p> Excel, SQL, Python and Tableau <a href="https://www.linkedin.com/in/thuan-trang/">@JackDataAnalyst</a> </p>
 						<ul class="actions">
