--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										</a></h2>
 									</header>
 									<a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="image fit"><img src="images/ifixit.jpg" alt="" /></a>
-									<p>During the pandemic, we provide nurses and technicians relevant and useful information about devices through this project.</p>
+									<p>Provide nurses and technicians relevant and useful information about repair guides through this project.</p>
 									<ul class="actions special">
 										<li><a href="https://jackt0274.wixsite.com/thuan-trang-e-portfo" class="button">View</a></li>
 									</ul>
@@ -98,13 +98,13 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Web%20Scraping%20Companies%20by%20Revenue.ipynb">Web Scraping<br />
+										<h2><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Automated%20Crypto%20Web%20Scraper%20Project.ipynb">Web Scraping<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Web%20Scraping%20Companies%20by%20Revenue.ipynb" class="image fit"><img src="images/world-map-pro.jpg" alt="" /></a>
-									<p>Scrape data from Wikipedia to analyze the largest companies in the United States by revenue.</p>
+									<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Automated%20Crypto%20Web%20Scraper%20Project.ipynb" class="image fit"><img src="bitcoin-cryptocurrency-golden-coins.jpg" alt="" /></a>
+									<p>Continuously monitor and record the price of Bitcoin by scraping data from the CoinMarketCap website.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Web%20Scraping%20Companies%20by%20Revenue.ipynb" class="button">View</a></li>
+										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Automated%20Crypto%20Web%20Scraper%20Project.ipynb" class="button">View</a></li>
 									</ul>
 								</article>
 								<article>
@@ -120,7 +120,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Bus_Breakdown_and_Delays_NYC%20Project.xlsx">Data Exploration In Excel<br />
+										<h2><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Bus_Breakdown_and_Delays_NYC%20Project.xlsx">Data Analytics In Excel<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Bus_Breakdown_and_Delays_NYC%20Project.xlsx" class="image fit"><img src="images/NYC Bus.jpg" alt="" /></a>
