--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 										<h2><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Automated%20Crypto%20Web%20Scraper%20Project.ipynb">Web Scraping<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Automated%20Crypto%20Web%20Scraper%20Project.ipynb" class="image fit"><img src="images.jpg" alt="" /></a>
+									<a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Automated%20Crypto%20Web%20Scraper%20Project.ipynb" class="image fit"><img src="images/images.jpg" alt="" /></a>
 									<p>Continuously monitor and record the price of Bitcoin by scraping data from the CoinMarketCap website.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/July24th2014/PorfolioProjects/blob/main/Automated%20Crypto%20Web%20Scraper%20Project.ipynb" class="button">View</a></li>
